<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (c) 2021, 2026 Contributors to Eclipse Foundation.
    Copyright (c) 1997, 2021 Oracle and/or its affiliates. All rights reserved.

    This program and the accompanying materials are made available under the
    terms of the Eclipse Public License v. 2.0, which is available at
    http://www.eclipse.org/legal/epl-2.0.

    This Source Code may also be made available under the following Secondary
    Licenses when the conditions for such availability set forth in the
    Eclipse Public License v. 2.0 are satisfied: GNU General Public License,
    version 2 with the GNU Classpath Exception, which is available at
    https://www.gnu.org/software/classpath/license.html.

    SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0

-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>

   <parent>
        <groupId>org.eclipse.ee4j</groupId>
        <artifactId>project</artifactId>
        <version>2.0.1</version>
    </parent>

   <groupId>org.glassfish.mojarra</groupId>
   <artifactId>mojarra-parent</artifactId>
   <version>5.0.0-M7</version>
   <packaging>pom</packaging>

   <name>Mojarra ${project.version} - Project</name>
   <licenses>
        <license>
            <name>EPL 2.0</name>
            <url>https://www.eclipse.org/legal/epl-2.0</url>
            <distribution>repo</distribution>
        </license>
        <license>
            <name>GPL2 w/ CPE</name>
            <url>https://www.gnu.org/software/classpath/license.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

   <modules>
        <module>impl</module>
        <module>test</module>
   </modules>

   <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>17</maven.compiler.release>
    </properties>

   <build>
        <plugins>
            <!-- Sets minimal Maven version and Java version. -->
            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.9.6</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[${maven.compiler.release},)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <!-- Only impl is published to Maven Central, via central-publishing-maven-plugin in
                 impl/pom.xml's central-release profile. Disable the default maven-deploy-plugin
                 here so the parent pom (and any sibling module that lacks its own publishing
                 configuration) is not deployed. -->
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>api</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>

            <modules>
                <module>faces/api</module>
            </modules>
        </profile>
    </profiles>
    
     
</project>
